Bloque A: UI moderna + listado claro de momentos clave analizados

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Smart Overlay Studio</title>
+    <title>Smart Overlay Studio — Modern</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -1142,8 +1142,8 @@
 
         <div class="stack">
           <section id="insights-panel" class="panel section-anchor" data-anchor="section-insights" hidden>
-            <h2 class="panel-title">3. Propuesta inicial</h2>
-            <p class="panel-sub">La IA detecta momentos clave y propone animaciones en lenguaje simple.</p>
+            <h2 class="panel-title">3. Momentos clave analizados</h2>
+            <p class="panel-sub">Lista de tramos detectados en la transcripción. Sobre estos momentos se construye la primera propuesta de animación.</p>
             <div id="insights-list" class="insights-list" style="margin-top: 10px"></div>
           </section>
 
